@@ -1,3 +1,10 @@
+Thu Jul 15 13:37:06 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * TAO_IDL/be/be_codegen.cpp(end_server_header):
+        
+          Changes to avoid a mismatched versioned namespace macro
+          pair in *S.h when the -SS option is used.
+
 Thu Jul 15 12:55:54 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_connector/executor_ami_exs.cpp:
